camo-derive/tests/cases/generics.stderr
error: `camo` does not support generics
 --> $DIR/generics.rs:4:11
  |
4 | struct Foo<T> {
  |           ^^^
