camo-derive/tests/cases/generics.rs
use camo_derive::Camo;

#[derive(Camo)]
struct Foo<T> {
    foo: T,
}

fn main() {}
